--- a/src/intl/locales/ru/translation.json
+++ b/src/intl/locales/ru/translation.json
@@ -261,6 +261,7 @@
   "Knowledge base": "База знаний",
   "Language": "Язык",
   "Last rev.": "Посл. изм.",
+  "Layouts": "Форматы",
   "Let's log in": "Давайте авторизуемся",
   "Liked": "Популярное",
   "Link copied to clipboard": "Ссылка скопирована в буфер обмена",
